$Id: NEWS,v 1.121 2001-08-01 15:03:11 flood Exp $

1.2.2 - CVS
---------------------------------
- Bug 1232 - UserOwner no longer performs chgrp
- Bug 1219 - compilation fix under gcc 3.0
- Bug 1230 - Portability fix for Sol 8 (sparcv9)
- Bug 1169 - Fix bug introduced by 1098, breaking DefaultRoot other
  than "~*"
- Bug 1234 - ABOR now always returns 226 (as per RFC959)
- New mod_sql from upstream maintainer

1.2.2rc3 - Released 06/19/2001
---------------------------------
- Bugs 1164,1020,1134,1190,1207
  Documentation updates
- Bug 1215 - Removed setpgid()/setpgrp() from fork_server()
- Bug 1145 - DirFakeUser can display current logged in user
- Bug 1210 - Possible silent truncation in net-ascii mode
- Bug 1212 - special files (devices, etc) didn't show up in directory
  listings.
- Bug 1189 - (again) <Directory> dups allowed in <Anonymous>
- Bug 1155 - non rfc behavior on filenames with spaces
- Bug 1193 - Error "~" processing while renaming files
- Bug 1203 - negation ('!') notation in Allow/Deny ACL broken
- Bug 1161 - %F magic cookie now displays free space on cwd
- Bug 1151 - Allow <Limit> searching in vhost or main server conf
- Copyright/License updated to allow linking to OpenSSL
- Bug 1183 - Removed duplicate find_class() call
- Bug 1189 - <Directory> duping checked for
- Bug 1185 - symlinks in homedirs now resolved at login
- Bug 1149 - Patch to contrib RPM init script
- Bug 1132 - Compilation fix for glibc 2.0
- Bug 1201 - Modifications to contrib/xferstats.holger-preiss
- Bug 1090 - {Allow,Deny}Filter Errors now *really* logged
- New mod_sql (and friends) from upstream maintainer
- Bug 1175 - GNU HURD portability
- Bug 1176 - PWD/XPWD can now be <Limit>ed
- Bug 1177 - mod_readme moved to contrib/
- Bug 1155 - HPUX portability cleanup
- Bug 1172 - Compiler clean for getopt code.
- Bug 1170 - Compiler cleanup for pr_fnmatch code.
- Bug 1169 - Better handling of DefaultRoot/DefaultChdir
- Bug 1168 - variable definitions moved from proftpd.h to main.c